# DAA_PROJECT2026

./: CMakeLists.txt  README.md
data/: blacklist.txt
include/: checker.h  crawler.h  parser.h  smart.h
src/: checker.cpp  crawler.cpp  main.cpp  parser.cpp  smart.cpp
